--- a/.gitignore
+++ b/.gitignore
@@ -133,7 +133,7 @@ dmypy.json
 
 .ini
 .csv
-*DS_Store
+.DS_Store
 .vscode/settings.json
 train.csv
 .vscode/settings.json
@@ -145,3 +145,4 @@ Netology.code-workspace
 events.out.*
 *.h5
 .vscode
+.DS_Store
