--- a/.gitignore
+++ b/.gitignore
@@ -94,6 +94,9 @@ ipython_config.py
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow
 __pypackages__/
 
+# Byte-compiled / optimized / DLL files
+__pycache__/
+
 # Celery stuff
 celerybeat-schedule
 celerybeat.pid
@@ -109,6 +112,9 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+.vscode
+.vscode/settings.json
+Netology.code-workspace
 
 # Spyder project settings
 .spyderproject
@@ -133,16 +139,30 @@ dmypy.json
 
 .ini
 .csv
+# macOS dir files
 .DS_Store
-.vscode/settings.json
-train.csv
-.vscode/settings.json
-requirements.txt
-venv/*
-Netology.code-workspace
-.DS_Store
+
 # keras logs
 events.out.*
 *.h5
-.vscode
-.DS_Store
+
+
+# Distribution / packaging
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
